# obey-the-testing-goat

./: .gitignore  README.org  functional_tests.py  manage.py  pyproject.toml
functional_tests/: tests.py
lists/: models.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_item_text.py  0003_auto_20180913_1207.py  0004_list.py  0005_task_parent_list.py  0006_auto_20180915_0005.py
lists/static/: base.css
lists/templates/lists/: base.html  home.html  list.html
superlists/: settings.py  urls.py  wsgi.py
superlists/superlists/: settings.py
