[tool.poetry]
name = "obey-the-testing-goat"
version = "0.1.0"
description = "Yinwei (Charlie) Zhang's walkthrough of Harry Percival's TDD Development book."
authors = ["Charlie Zhang <yinwei.c.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "1.11"
pip = "^18.0"
python-dotenv = "^0.9.1"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0" 
selenium = "^3"
importmagic = "^0.1.7"
epc = "^0.0.5"
yapf = "^0.23.0"
flake8 = "^3.5"
